--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -13,4 +13,4 @@ jobs:
           cache: pip
       - run: pip install -r requirements.txt
       - run: ruff check
-      - run: ruff format --check
+      - run: ruff format
