--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -12,5 +12,5 @@ jobs:
           python-version: "3.8"
           cache: pip
       - run: pip install -r requirements.txt
-      - run: ruff check
+      - run: ruff check --fix
       - run: ruff format
