--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -15,6 +15,7 @@ jobs:
         with:
           python-version: "3.8"
           cache: pip
+      - run: sudo apt-get update
       - run: pip install -r requirements.txt
       - run: ruff check --fix
       - run: ruff format
