--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -11,4 +11,5 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Run Tests
+        run: pip install pytest
         run: pytest unittest.py
