--- a/archebot/src/archebot/src/webapp/package.json
+++ b/archebot/src/archebot/src/webapp/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@radix-ui/react-progress": "^1.1.3",
@@ -19,7 +20,7 @@
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-leaflet": "5.0.0-rc.2",
+    "react-leaflet": "4.2.1",
     "react-leaflet-draw": "^0.20.6",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7"
@@ -27,13 +28,23 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/postcss": "^4.1.3",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^29.5.14",
     "@types/leaflet": "^1.9.17",
     "@types/node": "^20.17.30",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.2",
+    "babel-jest": "^29.7.0",
     "eslint": "^9.24.0",
     "eslint-config-next": "15.2.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "tailwindcss": "^4.1.3",
+    "ts-jest": "^29.3.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
 }
