--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -17,7 +17,7 @@ jobs:
       - run:  |
           pip install pytest
           pip install numpy
-          pip install cv2
+          pip install opencv-python
           pip install ultralytics
           pip install flask
           pytest
