--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -15,5 +15,5 @@ jobs:
           python-version: "3.8"
           cache: pip
       - run:  |
-          ls
-          pwd
+          pip install -r ./archebot/src/archebot/test/requirements.txt
+          pytest
