--- a/archebot/src/archebot/src/webapp/package.json
+++ b/archebot/src/archebot/src/webapp/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "leaflet": "^1.9.4",
+    "leaflet-draw": "^1.0.4",
     "lucide-react": "^0.477.0",
     "next": "15.2.1",
     "next-themes": "^0.4.6",
