--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -19,9 +19,17 @@ jobs:
         with:
           required-ros-distributions: noetic
       - run:  |
+          apt update
+          apt install -y python3-pip ros-noetic-sensor-msgs ros-noetic-roslaunch
+          source /opt/ros/noetic/setup.bash
+
+          echo "ROS_PACKAGE_PATH: $ROS_PACKAGE_PATH"
+          
           python3 --version
           pip3 --version
           which python3
           which pip3
+          
           pip3 install -r ./archebot/src/archebot/test/requirements.txt
           pytest
+      shell: bash
