--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,12 @@
 rospy==1.17.0
 sensor_msgs==1.13.1
+Flask==2.2.5
+Markdown==3.7
+marshmallow==3.22.0
+flask-cors==3.0.10
+geopy
+gpxpy
+numpy
+opencv-python
+ultralytics
+pytest
