--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -33,5 +33,5 @@ jobs:
           which python3
           which pip3
           
-          pip3 install -r ./archebot/src/archebot/test/requirements.txt
+          pip3 install -r ./requirements.txt
           pytest
