--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -33,5 +33,6 @@ jobs:
           which python3
           which pip3
           
-          pip3 install -r ./requirements.txt
+          pip3 install uv
+          uv pip install -r ./requirements.txt
           pytest
